--- a/Data-Structure/2.1 Sequence_table.md
+++ b/Data-Structure/2.1 Sequence_table.md
@@ -193,7 +193,36 @@ typedef struct
 
 将两个递增顺序的线性表合并为一个递增有序的线性表。
 
+1. 算法步骤
 
+    - 设置
+
+2. 算法描述
+
+    ```C++
+    void MergeList(SqList La, SqList Lb, SqList *Lc)
+    {
+        ElemType *pa,*pb,*pc,*pa_last,*pb_last;
+        pa = La.elem; pb = Lb.elem;
+        Lc->length = La.length + Lb.length;
+        Lc.elem=(ElemType)malloc(Lc->length*sizeof(ElemType));
+        pc = Lc->elem;
+        if(!Lc->elem) exit(OVERFLOW);
+        pa_last=La.elem+La.length-1;
+        pb_last=Lb.elem+Lb.length-1;
+        while (pa<=pa_last && pb<=pb_last)
+        {
+            if(*pa<=*pb) *pc++=*pa++;
+            else *pc++=*pb++;
+        }
+        while(pa<=pa_last) *pc++=*pa++;
+        while(pb<=pb_last) *pc++=*pb++;
+    }
+    ```
+
+3. 算法分析
+
+    - 顺序表合并算法的时间复杂度为**`O(La.length+Lb.length)`**。
 
 ---
 
